[feat] 마이페이지 참여스터디 조회
